# graphics-programming-rabbit-hole

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.md  README.md  imgui.ini  vcpkg.json
assets/brick_wall/: brick_wall.blend  brick_wall.gltf
assets/parallax_cube/: parallax_cube.blend  parallax_cube.blend1  parallax_cube.gltf
assets/stone_wall/: stone_wall.blend  stone_wall.gltf
cmake/: warnings.cmake
src/: app.hpp  camera.cpp  camera.hpp  common.inl  impl.cpp  model.cpp  model.hpp  texture.cpp  texture.hpp  threadpool.hpp
src/basic_compute/: main.cpp  shader.glsl
src/basic_forward/: main.cpp  shader.glsl  shared.inl
src/bloom/: composition.glsl  down_sample.glsl  main.cpp  render.glsl  shared.inl  up_sample.glsl
src/compute_triangle/: main.cpp  shader.glsl  shared.inl
src/deferred/: composition.glsl  g_buffer_gather.glsl  main.cpp  shared.inl
src/directional_shadow/: main.cpp  shader.glsl  shadow.glsl  shared.inl
src/exponential_shadow_mapping/: main.cpp  shader.glsl  shadow.glsl  shared.inl
src/exponential_variance_shadow_mapping/: filter_gauss.glsl  main.cpp  shader.glsl  shadow.glsl  shared.inl
src/forward/: main.cpp  shader.glsl  shared.inl
src/fxaa/: apply_fxaa.glsl  main.cpp  shader.glsl  shared.inl
src/normal_mapping/: main.cpp  shader.glsl  shared.inl
src/parallax_mapping/: main.cpp  shader.glsl  shared.inl
src/percentage_closer_soft_shadows/: main.cpp  shader.glsl  shadow.glsl  shared.inl
src/reflective_shadow_mapping/: main.cpp  samples.glsl  shader.glsl  shadow.glsl  shared.inl
src/spot_shadow/: main.cpp  shader.glsl  shadow.glsl  shared.inl
(+29 files in other folders)
